07-URLpol/www-networkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule1"
specs:
  - description: "L7 policy to restrict access to specific HTTP call"
    endpointSelector:
      matchLabels:
        type: l7-test
    ingress:
    - fromEndpoints:
      - matchLabels:
          org: client-pod
      toPorts:
      - ports:
        - port: "8080"
          protocol: TCP
        rules:
          http:
          - method: "GET"
            path: "/discount"
